Fixed jumpy submenuitem when one hovers.
git-svn-id: svn://svn.webtrees.net/trunk/phpGedView@5666 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/themes/cloudy/style.css
+++ b/themes/cloudy/style.css
@@ -1049,6 +1049,7 @@ th {
 	background-color: white;
 	font: normal 11px tahoma, arial, helvetica, sans-serif;
 	text-decoration: none;
+	height: 22px;
 	border: 1pt solid #aaccff;
 	white-space: nowrap;
 	color: #003399;
